--- a/ADV.Order/Views/_ViewImports.cshtml
+++ b/ADV.Order/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using ADV.Orders
-@namespace ADV.Orders.Pages
+﻿@using ADV.Order
+@using ADV.Order.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
