--- a/ADV.Order/Views/_ViewImports.cshtml
+++ b/ADV.Order/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using ADV.Order
-@using ADV.Order.Models
+﻿@using ADV.Orders
+@using ADV.Orders.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
