--- a/ADV.Order/Views/Home/Index.cshtml
+++ b/ADV.Order/Views/Home/Index.cshtml
@@ -4,14 +4,11 @@
 
 
 <div class="row">
-    <div class="col-md-4">
-        @foreach (var value in (List<ADV.OrdersProducts.Models.OrdersViewModel>)ViewBag.Orders)
-        {
-            
-//value.OrderName + " " + value.DateCreate;
-            
-        }
+    <div class="col-md-4 border border-info">
+        @await Html.PartialAsync("Orders", (List<ADV.OrdersProducts.Models.OrdersViewModel>)ViewBag.Orders)
     </div>
-    <div class="col-md-8">
+    <div class="col-md-8 border border border-info">
+        @await Html.PartialAsync("DatailOrder", (ADV.OrdersProducts.Models.DatailsOrderViewModel)ViewBag.DatailOrder)
+        @await Html.PartialAsync("Products", (List<ADV.OrdersProducts.Models.ProductsViewModel>)ViewBag.Product)
     </div>
 </div>
