Получение данных из БД вывод на клиента

--- a/ADV.Order/Views/Home/Orders.cshtml
+++ b/ADV.Order/Views/Home/Orders.cshtml
@@ -3,6 +3,6 @@
 <ul>
     @foreach (var item in Model)
     {
-        <li>@item.OrderName @item.DateCreate</li>
+        <li>@item.OrderName @item.DateCreate.ToString("dd.MM.yyyy HH:mm")</li>
     }
 </ul>
