--- a/ADV.Order/Views/Home/Index.cshtml
+++ b/ADV.Order/Views/Home/Index.cshtml
@@ -4,11 +4,15 @@
 
 
 <div class="row">
-    <div class="col-md-4 border border-info">
+    <div class="col-md-3 border border-info">
         @await Html.PartialAsync("Orders", (List<ADV.OrdersProducts.Models.OrdersViewModel>)ViewBag.Orders)
     </div>
-    <div class="col-md-8 border border border-info">
+    <div class="col-md-8 offset-1">
+
         @await Html.PartialAsync("DatailOrder", (ADV.OrdersProducts.Models.DatailsOrderViewModel)ViewBag.DatailOrder)
+
+        <br/>
+
         @await Html.PartialAsync("Products", (List<ADV.OrdersProducts.Models.ProductsViewModel>)ViewBag.Product)
     </div>
 </div>
