Модель для Index

--- a/ADV.Order/Views/Home/Index.cshtml
+++ b/ADV.Order/Views/Home/Index.cshtml
@@ -1,18 +1,19 @@
-﻿@{
+﻿@model ADV.OrdersProducts.ModelsView.IndexHomeViewModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
 
 <div class="row">
     <div class="col-md-3 border border-info">
-        @await Html.PartialAsync("Orders", (List<ADV.OrdersProducts.Models.OrdersViewModel>)ViewBag.Orders)
+        @await Html.PartialAsync("Orders", Model.OrdersViewModel)
     </div>
     <div class="col-md-8 offset-1">
 
-        @await Html.PartialAsync("DatailOrder", (ADV.OrdersProducts.Models.DatailsOrderViewModel)ViewBag.DatailOrder)
+        @await Html.PartialAsync("DatailOrder", Model.DatailsOrderViewModel)
 
         <br/>
 
-        @await Html.PartialAsync("Products", (List<ADV.OrdersProducts.Models.ProductsViewModel>)ViewBag.Product)
+        @await Html.PartialAsync("Products", Model.ProductsViewModel)
     </div>
 </div>
