--- a/ADV.Order/Views/Home/DatailOrder.cshtml
+++ b/ADV.Order/Views/Home/DatailOrder.cshtml
@@ -20,7 +20,18 @@
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Status)
             </dt>
-            <dd class="col-sm-10">
+            @{
+                string colorText = String.Empty;
+                if (Model.Status == ADV.OrdersProducts.Model.Status.Complete)
+                {
+                    colorText = "text-success";
+                }
+                else
+                {
+                    colorText = "text-danger";
+                }
+            }
+            <dd class="col-sm-10 @colorText">
                 @Html.DisplayFor(model => model.Status)
             </dd>
             <dt class="col-sm-2">
