Получение и запись ответа на клиенте

--- a/ADV.Order/Views/Home/Products.cshtml
+++ b/ADV.Order/Views/Home/Products.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<ADV.OrdersProducts.Models.ProductsViewModel>
 
-<div class="border border border-info" data-bind="html: products">
+<div class="border border border-info" data-bind="html: products" id="products">
     <table class="table">
         <thead>
             <tr>
